# aituber-build-tool

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  debug_server.py  pyproject.toml  simple_test.py  test_server.py  todo.md
.cursor/context/: base.md  design_architecture.md  design_system_api.md  design_user_api.md
.cursor/rules/: base.mdc  coding-rules.mdc
.github/workflows/: ci.yaml
dockerfiles/: Dockerfile
examples/: api_test.py
src/aituber/: __init__.py  __main__.py  app.py
src/aituber/api/: api.py  constants.py
src/aituber/character/: __init__.py  manager.py  models.py  storage.py
src/aituber/cli/: __init__.py  main.py
src/aituber/core/: __init__.py  app_factory.py  character_utils.py  config.py  container.py  context.py  events.py  exceptions.py
src/aituber/core/models/: character.py
src/aituber/core/services/: character.py  conversation.py  llm.py  llm.py.bak  memory.py  tts_service.py
src/aituber/core/services/llm/: __init__.py  base.py  openai.py
src/aituber/core/services/memory/: __init__.py  base.py  chromadb.py
src/aituber/core/services/storage/: __init__.py  base.py  character.py  local.py
src/aituber/integrations/chromadb/: memory.py
src/aituber/integrations/openai/: llm.py
src/aituber/integrations/storage/: character.py
src/aituber/interface/cli/: __main__.py  main.py
src/aituber/llm/: __init__.py  conversation.py  langchain_integration.py
src/aituber/memory/: __init__.py  manager.py  models.py
tests/: __init__.py  test_character.py  test_conversation_manager.py  test_llm.py  test_memory.py  test_services.py
tests/api/: test_api_integration.py  test_character_loading.py  test_chat_api.py
tests/integration/: test_api_integration.py
tests/unit/: test_conversation_manager.py  test_services.py
tests/unit/api/: test_chat_api.py
